--- a/vignettes/pleiades.Rmd
+++ b/vignettes/pleiades.Rmd
@@ -1,5 +1,5 @@
 <!--
-%\VignetteEngine{knitr::knitr}
+%\VignetteEngine{knitr::rmarkdown}
 %\VignetteIndexEntry{pleiades introduction}
 %\VignetteEncoding{UTF-8}
 -->
@@ -29,8 +29,7 @@ Dev version
 
 
 ```r
-install.packages("devtools")
-devtools::install_github("ropensci/pleiades")
+remotes::install_github("ropensci/pleiades")
 ```
 
 
